--- a/react_app_ts_sub_01/package.json
+++ b/react_app_ts_sub_01/package.json
@@ -58,6 +58,9 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
+    "qiankun:start": "rescripts start",
+    "qiankun:build": "rescripts build",
+    "qiankun:test": "rescripts test",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -135,5 +138,10 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@rescripts/cli": "0.0.16",
+    "react-scripts": "^5.0.1",
+    "url-loader": "^4.1.1"
   }
 }
